# financial-news-sentiment-dashboard

./: .gitignore  pyproject.toml
lambda_handler/: hourly_handler.py
src/: data_models.py  main.py
src/automation/: __init__.py  _helpers.py  _hourly.py
src/core/: env.py
src/model_building/: distill_model.py  prepare_dataset.py
src/scraping/: __init__.py  _run_scraper.py  _scrape_google.py  _scrape_yahoo.py
src/sentiment/: analyzer.py
src/storage/: __init__.py  _factory.py  _interface.py  _local_storage.py  _s3_storage.py
tests/: conftest.py  test_automation.py  test_scrapping.py  test_sentiment.py
typings/yahoo_fin/: __init__.pyi  news.pyi  options.pyi  stock_info.pyi
